--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.host.url=https://sonarcloud.io
 sonar.projectKey=unrealwork_parcel-delivery-app
 sonar.organization=unrealwork-github
-sonar.jacoco.reportPaths=build/reports/jacoco/test/jacocoTestReport.xml
+sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
