--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,4 +41,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.PR_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew build jacocoTestReport sonarqube --debug
+        run: ./gradlew test jacocoTestReport sonarqube --info
