--- a/pda-order/src/main/resources/application.yml
+++ b/pda-order/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 application:
   security:
     jwt:
@@ -28,4 +29,7 @@ spring:
     properties:
       hibernate.id.new_generator_mappings: true
       hibernate.connection.provider_disables_autocommit: true
-      hibernate.format_sql: true  
+      hibernate.format_sql: true
+  jackson:
+    deserialization:
+      use-big-decimal-for-floats: true        
