--- a/pda-delivery/src/main/resources/application-dev.yml
+++ b/pda-delivery/src/main/resources/application-dev.yml
@@ -1,7 +1,11 @@
 spring:
   liquibase:
     drop-first: true
+    enabled: true
   
   datasource:
     hikari:
       auto-commit: false
+  jpa:
+    hibernate:
+      ddl-auto: validate
