--- a/pda-auth/src/main/resources/db/changelog-master.yaml
+++ b/pda-auth/src/main/resources/db/changelog-master.yaml
@@ -1,8 +1,4 @@
 databaseChangeLog:
-  - include:
-      file: changelog/20230310_001_initial_schema.yml
+  - includeAll:
+      path: changelog
       relativeToChangelogFile: true
-  - include:
-      file: changelog/20230310_002_load_data.yml
-      relativeToChangelogFile: true
-      
