#49: Deilivery: API: view details of order

--- a/pda-delivery/src/test/resources/application.yml
+++ b/pda-delivery/src/test/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     database:
       replace: none
   datasource:
-    url: jdbc:tc:postgresql:14:///pda-auth-test
+    url: jdbc:tc:postgresql:14:///pda-delivery-test
   liquibase:
     drop-first: true
     change-log: classpath:/db/changelog-master.yaml
