--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -38,8 +38,8 @@ liquibase-hibernate5 = { module = "org.liquibase.ext:liquibase-hibernate5", vers
 tc = { module = "org.testcontainers:testcontainers", version.ref = "testcontainers" }
 tc-junit = { module = "org.testcontainers:junit-jupiter", version.ref = "testcontainers" }
 tc-psql = { module = "org.testcontainers:postgresql", version.ref = "testcontainers" }
-rest-assured = { module = "io.rest-assured:spring-mock-mvc", version.ref = "restassured" }
-
+snake-yaml = { module = "org.yaml:snakeyaml", version = "1.29" }
+picoli = { module = "info.picocli:picocli", version = "4.6.1" }
 
 [bundles]
 jjwt = ["jjwt-api", "jjwt-impl", "jjwt-jackson"]
