--- a/pda-order/src/main/resources/db/changelog-master.yaml
+++ b/pda-order/src/main/resources/db/changelog-master.yaml
@@ -1,5 +1,4 @@
 databaseChangeLog:
-  - include:
-      file: changelog/20230312_001_initial_schema.yml
+  - includeAll:
+      path: changelog
       relativeToChangelogFile: true
-      
