--- a/pda-delivery/src/main/resources/application-dev.yml
+++ b/pda-delivery/src/main/resources/application-dev.yml
@@ -1,11 +1,7 @@
 spring:
   liquibase:
     drop-first: true
-    enabled: true
-  
-  datasource:
-    hikari:
-      auto-commit: false
+    enabled: false
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
