--- a/pda-auth/src/main/resources/application.yml
+++ b/pda-auth/src/main/resources/application.yml
@@ -15,6 +15,8 @@ spring:
     url: jdbc:postgresql://localhost:15432/pda_auth_db
     username: pda_auth_user
     password: pda_auth_pwd
+    hikari:
+      auto-commit: false
   liquibase:
     change-log: classpath:/db/changelog-master.yaml
   jpa:
@@ -24,8 +26,17 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
         implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
-      ddl-auto: none
+      ddl-auto: validate
     properties:
       hibernate.id.new_generator_mappings: true
       hibernate.connection.provider_disables_autocommit: true
-      hibernate.format_sql: true  
+      hibernate.format_sql: true
+    open-in-view: false
+  cloud:
+    function:
+      definition: ;
+    stream:
+      bindings:
+        userCreatedEvent:
+          destination: user-created
+      output-bindings: userCreatedEvent
