--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,9 +22,11 @@ spring-security = { module = "org.springframework.boot:spring-boot-starter-secur
 spring-data-jpa = { module = "org.springframework.boot:spring-boot-starter-data-jpa" }
 spring-validation = { module = "org.springframework.boot:spring-boot-starter-validation" }
 spring-test = { module = "org.springframework.boot:spring-boot-starter-test" }
+spring-cloud-stream-test = { module = "org.springframework.cloud:spring-cloud-stream-test-support", version = "4.0.1" }
 spring-security-test = { module = "org.springframework.security:spring-security-test" }
 spring-devtools = { module = "org.springframework.boot:spring-boot-devtools" }
 spring-actuator = { module = "org.springframework.boot:spring-boot-starter-actuator" }
+spring-cloud-stream = { module = "org.springframework.cloud:spring-cloud-starter-stream-kafka", version = "4.0.1" }
 lombok = { module = "org.projectlombok:lombok", version.ref = "lombok" }
 jjwt-api = { module = "io.jsonwebtoken:jjwt-api", version.ref = "jjwt" }
 jjwt-impl = { module = "io.jsonwebtoken:jjwt-impl", version.ref = "jjwt" }
@@ -38,12 +40,13 @@ liquibase-hibernate5 = { module = "org.liquibase.ext:liquibase-hibernate5", vers
 tc = { module = "org.testcontainers:testcontainers", version.ref = "testcontainers" }
 tc-junit = { module = "org.testcontainers:junit-jupiter", version.ref = "testcontainers" }
 tc-psql = { module = "org.testcontainers:postgresql", version.ref = "testcontainers" }
+tc-kafka = { module = "org.testcontainers:kafka", version.ref = "testcontainers" }
 snake-yaml = { module = "org.yaml:snakeyaml", version = "1.29" }
 picoli = { module = "info.picocli:picocli", version = "4.6.1" }
 
 [bundles]
 jjwt = ["jjwt-api", "jjwt-impl", "jjwt-jackson"]
-tc = ["tc", "tc-junit", "tc-psql"]
+tc = ["tc", "tc-junit", "tc-psql", "tc-kafka"]
 
 [plugins]
 sonar = { id = "org.sonarqube", version = "4.0.0.2929" }
