--- a/pda-delivery/src/main/resources/application.yml
+++ b/pda-delivery/src/main/resources/application.yml
@@ -37,11 +37,23 @@ spring:
       use-big-decimal-for-floats: true
   cloud:
     function:
-      definition: courierUserCreatedConsumer
+      definition: courierUserCreatedConsumer;orderStatusChangedConsumer;orderCreatedProcessor
     stream:
       function:
         bindings:
-          courierUserCreatedConsumer-in-0: userCreatedEvent
+          courierUserCreatedConsumer-in-0: userCreatedEventIn
+          orderStatusChangedConsumer-in-0: orderStatusChangedIn
+          orderStatusChangedConsumer-out-0: orderStatusChanged
+      output-bindings: orderStatusChanged
       bindings:
-        userCreatedEvent:
+        orderCreatedProcessor-in-0:
+          destination: order-created
+        orderCreatedProcessor-out-0:
+          destination: order-status-changed
+        userCreatedEventIn:
           destination: user-created
+        orderStatusChangedIn:
+          destination: order-status-changed
+        orderStatusChanged:
+          destination: order-status-changed
+        
