--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ spring-data-jpa = { module = "org.springframework.boot:spring-boot-starter-data-
 spring-validation = { module = "org.springframework.boot:spring-boot-starter-validation" }
 spring-test = { module = "org.springframework.boot:spring-boot-starter-test" }
 spring-cloud-stream-test = { module = "org.springframework.cloud:spring-cloud-stream-test-support", version = "4.0.1" }
+spring-cloud-stream-test-binder = { module = "org.springframework.cloud:spring-cloud-stream-test-binder", version = "4.0.1" }
 spring-security-test = { module = "org.springframework.security:spring-security-test" }
 spring-devtools = { module = "org.springframework.boot:spring-boot-devtools" }
 spring-actuator = { module = "org.springframework.boot:spring-boot-starter-actuator" }
