GH-59: Events: Order creation (#60)
* #59: Events: Order creation

* #59: Events: Order creation test

* #59: Events: Order creation test: fix main classes tests

* #59: Events: Order creation test: fix OrderStatusChangedConsumerTest

* #59: Events: Order creation test: enable schema validation, make created_at not updatable

* #59: Events: make events more fine-grained, consume only events from other domains

* #59: Events: reduce config size

* #59: Events: fix non-timeouted verify

* #59: Events: use test-binder for spring cloud stream tests

* #59: Events: use test-binder for spring cloud stream tests

* #59: Events: cover basic structures with tests

* #59: Events: cover basic structures with tests

--- a/pda-delivery/src/main/resources/application.yml
+++ b/pda-delivery/src/main/resources/application.yml
@@ -37,11 +37,18 @@ spring:
       use-big-decimal-for-floats: true
   cloud:
     function:
-      definition: courierUserCreatedConsumer
+      definition: courierUserCreatedConsumer;orderStatusChangedConsumer;orderCreatedProcessor
     stream:
       function:
         bindings:
           courierUserCreatedConsumer-in-0: userCreatedEvent
+          orderStatusChangedConsumer-in-0: orderStatusChangedEvent
       bindings:
+        #in
+        orderCreatedProcessor-in-0:
+          destination: order-created
+        orderStatusChangedEvent:
+          destination: order-status-changed
         userCreatedEvent:
           destination: user-created
+        
