--- a/pda-order/src/main/resources/application.yml
+++ b/pda-order/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 application:
   security:
     jwt:
@@ -19,6 +18,7 @@ spring:
     password: pda_order_pwd
   liquibase:
     change-log: classpath:/db/changelog-master.yaml
+
   jpa:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
@@ -26,11 +26,25 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
         implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
-      ddl-auto: none
+      ddl-auto: validate
     properties:
       hibernate.id.new_generator_mappings: true
       hibernate.connection.provider_disables_autocommit: true
       hibernate.format_sql: true
+  
   jackson:
     deserialization:
-      use-big-decimal-for-floats: true        
+      use-big-decimal-for-floats: true
+  cloud:
+    function:
+      definition: deliveryAssignedConsumer;deliveryAcceptedConsumer
+    stream:
+      function:
+        bindings:
+          deliveryAssignedConsumer-in-0: deliveryAssignedEvent
+          deliveryAcceptedConsumer-in-0: deliveryAcceptedEvent
+      bindings:
+        deliveryAssignedEvent:
+          destination: delivery-assigned
+        deliveryAcceptedEvent:
+          destination: delivery-accepted
