--- a/pda-delivery/src/main/resources/application-dev.yml
+++ b/pda-delivery/src/main/resources/application-dev.yml
@@ -1,7 +1,6 @@
 spring:
   liquibase:
-    drop-first: true
     enabled: false
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
