--- a/pda-delivery/src/main/resources/application.yml
+++ b/pda-delivery/src/main/resources/application.yml
@@ -51,4 +51,9 @@ spring:
           destination: order-status-changed
         userCreatedEvent:
           destination: user-created
-        
+springdoc:
+  swagger-ui:
+    use-root-path: true
+    with-credentials: true
+    persist-authorization: true
+  default-produces-media-type: application/json
