#61: Setup API Gateway: proxy, springdoc documentation: increase null safety, it test with mocksever

--- a/pda-api-gateway/src/main/resources/application.yml
+++ b/pda-api-gateway/src/main/resources/application.yml
@@ -30,4 +30,6 @@ springdoc:
       - name: gateway
         display-name: API Gateway
         url: /v3/api-docs
-      
+    syntax-highlight:
+      activated: true
+      theme: obsidian
