--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -48,8 +48,10 @@ tc = { module = "org.testcontainers:testcontainers", version.ref = "testcontaine
 tc-junit = { module = "org.testcontainers:junit-jupiter", version.ref = "testcontainers" }
 tc-psql = { module = "org.testcontainers:postgresql", version.ref = "testcontainers" }
 tc-kafka = { module = "org.testcontainers:kafka", version.ref = "testcontainers" }
+tc-mockserver = { module = "org.testcontainers:mockserver", version.ref = "testcontainers" }
 snake-yaml = { module = "org.yaml:snakeyaml", version = "1.29" }
 picoli = { module = "info.picocli:picocli", version = "4.6.1" }
+mockserver-client = { module = "org.mock-server:mockserver-client-java", version = "5.15.0" }
 
 [bundles]
 jjwt = ["jjwt-api", "jjwt-impl", "jjwt-jackson"]
