#61: Setup API Gateway: proxy, springdoc documentation: increase null safety, it test with mocksever

--- a/config/env/pda-api-gateway.env
+++ b/config/env/pda-api-gateway.env
@@ -1,3 +1,6 @@
 PDA_AUTH_HOST=pda-auth
+PDA_AUTH_PORT=8081
 PDA_ORDER_HOST=pda-order
+PDA_ORDER_PORT=8082
 PDA_DELIVERY_HOST=pda-delivery
+PDA_DELIVERY_PORT=8083
