GH-61: Setup API Gateway: proxy, springdoc documentation (#62)
* #61: Setup API Gateway: proxy, springdoc documentation

* #61: Setup API Gateway: proxy, springdoc documentation:
tests for AuthPolicyCustomizer

* #61: Setup API Gateway: proxy, springdoc documentation:
tests for AuthPolicyCustomizer

* #61: Setup API Gateway: proxy, springdoc documentation:
tests for MicroserviceOpenApiRegistry

* #61: Setup API Gateway: proxy, springdoc documentation:
tests for MicroserviceOpenApiRegistry

* #61: Setup API Gateway: proxy, springdoc documentation:
tests for MicroserviceOpenApiRegistry

* #61: Setup API Gateway: proxy, springdoc documentation:
tests for MicroserviceOpenApiRegistry

* #61: Setup API Gateway: proxy, springdoc documentation:
main class test

* #61: Setup API Gateway: proxy, springdoc documentation:
increase null safety, it test with mocksever

* #61: Setup API Gateway: proxy, springdoc documentation:
increase null safety, it test with mocksever

* #61: Setup API Gateway: proxy, springdoc documentation:
increase null safety, it test with mocksever

* #61: Setup API Gateway: proxy, springdoc documentation:
increase null safety, it test with mocksever

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,13 +21,19 @@ spring-web = { module = "org.springframework.boot:spring-boot-starter-web" }
 spring-security = { module = "org.springframework.boot:spring-boot-starter-security" }
 spring-data-jpa = { module = "org.springframework.boot:spring-boot-starter-data-jpa" }
 spring-validation = { module = "org.springframework.boot:spring-boot-starter-validation" }
-spring-test = { module = "org.springframework.boot:spring-boot-starter-test" }
-spring-cloud-stream-test = { module = "org.springframework.cloud:spring-cloud-stream-test-support", version = "4.0.1" }
-spring-cloud-stream-test-binder = { module = "org.springframework.cloud:spring-cloud-stream-test-binder", version = "4.0.1" }
-spring-security-test = { module = "org.springframework.security:spring-security-test" }
 spring-devtools = { module = "org.springframework.boot:spring-boot-devtools" }
 spring-actuator = { module = "org.springframework.boot:spring-boot-starter-actuator" }
 spring-cloud-stream = { module = "org.springframework.cloud:spring-cloud-starter-stream-kafka", version = "4.0.1" }
+spring-cloud-gateway = { module = "org.springframework.cloud:spring-cloud-starter-gateway", version = "4.0.1" }
+spring-doc = { module = "org.springdoc:springdoc-openapi-starter-webmvc-ui", version = "2.0.4" }
+spring-doc-reactive = { module = "org.springdoc:springdoc-openapi-starter-webflux-ui", version = "2.0.4" }
+swagger-validation = { module = "io.swagger:swagger-hibernate-validations", version = "1.6.10" }
+spring-test = { module = "org.springframework.boot:spring-boot-starter-test" }
+spring-security-test = { module = "org.springframework.security:spring-security-test" }
+swagger-parser = { module = "io.swagger.parser.v3:swagger-parser", version = "2.1.12" }
+spring-cloud-stream-test = { module = "org.springframework.cloud:spring-cloud-stream-test-support", version = "4.0.1" }
+spring-cloud-stream-test-binder = { module = "org.springframework.cloud:spring-cloud-stream-test-binder", version = "4.0.1" }
+jaxb-api = { module = "javax.xml.bind:jaxb-api", version = "2.3.1" }
 lombok = { module = "org.projectlombok:lombok", version.ref = "lombok" }
 jjwt-api = { module = "io.jsonwebtoken:jjwt-api", version.ref = "jjwt" }
 jjwt-impl = { module = "io.jsonwebtoken:jjwt-impl", version.ref = "jjwt" }
@@ -42,8 +48,10 @@ tc = { module = "org.testcontainers:testcontainers", version.ref = "testcontaine
 tc-junit = { module = "org.testcontainers:junit-jupiter", version.ref = "testcontainers" }
 tc-psql = { module = "org.testcontainers:postgresql", version.ref = "testcontainers" }
 tc-kafka = { module = "org.testcontainers:kafka", version.ref = "testcontainers" }
+tc-mockserver = { module = "org.testcontainers:mockserver", version.ref = "testcontainers" }
 snake-yaml = { module = "org.yaml:snakeyaml", version = "1.29" }
 picoli = { module = "info.picocli:picocli", version = "4.6.1" }
+mockserver-client = { module = "org.mock-server:mockserver-client-java", version = "5.15.0" }
 
 [bundles]
 jjwt = ["jjwt-api", "jjwt-impl", "jjwt-jackson"]
