#61: Setup API Gateway: proxy, springdoc documentation: increase null safety, it test with mocksever

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,16 +29,15 @@ jobs:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
-            
+
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
-      
-      - name: Build and analyze
+      - name: Test compose
         env:
           GITHUB_TOKEN: ${{ secrets.PR_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew test sonarqube --info
+        run: docker-compose up -d && docker-compose down
