--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,4 +40,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.PR_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: docker-compose up --no-TTY && docker-compose down
+        run: docker-compose --no-TTY up && docker-compose down
