--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,5 +41,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PR_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: docker-compose up -d && docker-compose down
+      - name: Collect docker logs
         if: ${{ failure() }}
-          run: docker-compose logs
+        run: docker-compose logs
