--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,7 +40,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.PR_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: docker-compose up -d wait && docker-compose down
+        run: docker-compose up -f docker-compose.yml -f docker-compose.ci.yml -d wait && docker-compose down
       - name: Collect docker logs
         if: ${{ failure() }}
         run: docker-compose logs
