#61: Setup API Gateway: proxy, springdoc documentation: increase null safety, it test with mocksever : compose test

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -2,8 +2,8 @@ services:
   wait:
     image: hello-world:latest
     depends_on:
-      some-container:
-        condition: db_pda_delivery
+      db_pda_delivery:
+        condition: service_healthy
   db_pda_delivery:
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready" ]
