#61: Setup API Gateway: proxy, springdoc documentation: increase null safety, it test with mocksever : compose test

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -3,7 +3,7 @@ services:
     image: hello-world:latest
     depends_on:
       db_pda_delivery:
-        condition: service_healthy
+        condition: pda-delivery
   db_pda_delivery:
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready" ]
