--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -2,8 +2,8 @@ services:
   wait:
     image: hello-world:latest
     depends_on:
-      db_pda_delivery:
-        condition: pda-delivery
+      pda-delivery:
+        condition: service_healthy
   db_pda_delivery:
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready" ]
