#61: Setup API Gateway: proxy, springdoc documentation: increase null safety, it test with mocksever : fastest check

--- a/config/env/pda-delivery-db.env
+++ b/config/env/pda-delivery-db.env
@@ -1,3 +1,3 @@
-POSTGRES_DB: pda_delivery_db
-POSTGRES_USER: pda_delivery_user
-POSTGRES_PASSWORD: pda_delivery_pwd
+POSTGRES_DB=pda_delivery_db
+POSTGRES_USER=pda_delivery_user
+POSTGRES_PASSWORD=pda_delivery_pwd
