--- a/config/env/pda-auth-db.env
+++ b/config/env/pda-auth-db.env
@@ -1,3 +1,3 @@
-POSTGRES_DB: pda_auth_db
-POSTGRES_USER: pda_auth_user
-POSTGRES_PASSWORD: pda_auth_pwd
+POSTGRES_DB=pda_auth_db
+POSTGRES_USER=pda_auth_user
+POSTGRES_PASSWORD=pda_auth_pwd
