--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -2,5 +2,5 @@ services:
   wait:
     image: hello-world:latest
     depends_on:
-      pda-delivery:
-        condition: pda_api_gateway
+      pda_api_gateway:
+        condition: service_healthy
