#61: Setup API Gateway: test compose full

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,7 +37,8 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
       - name: Test docker compose deploy
+        if: ${{ github.event_name == 'push' }}
         run: docker-compose -f docker-compose.yml -f docker-compose.ci.yml up --remove-orphans -d wait && docker-compose down
-      - name: Collect docker logs
-        if: ${{ failure() }}
+      - name: Collect docker log
+        if: ${{ failure() && github.event_name == 'push' }}
         run: docker-compose logs
